Add footer section with contact info, quote, feedback link, and support options

--- a/about.html
+++ b/about.html
@@ -103,6 +103,22 @@
                             <i class="fab fa-discord"></i>
                         </a>
                     </div>
+                    <div class="footer-contact">
+                        <p>
+                            <strong>Contact:</strong>
+                            <a href="mailto:hypekingfishttv@gmail.com">hypekingfishttv@gmail.com</a>
+                        </p>
+                    </div>
+                    <div class="footer-quote">
+                        <em>"Keep flying high and coding harder!"</em>
+                    </div>
+                    <div class="footer-feedback">
+                        <a href="mailto:hypekingfishttv@gmail.com.com?subject=Website Feedback">Send Feedback</a>
+                    </div>
+                    <div class="footer-support">
+                        <h4>Support the Site</h4>
+                        <a href="https://www.buymeacoffee.com/Hypekingfish"><img src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=&slug=Hypekingfish&button_colour=FFDD00&font_colour=000000&font_family=Cookie&outline_colour=000000&coffee_colour=ffffff" /></a>
+                    </div>
                     <p class="footer-copyright">
                         <small>
                             &copy; <span id="year"></span> Hypekingfish. All rights reserved.<br>
