--- a/streaming.html
+++ b/streaming.html
@@ -25,76 +25,108 @@
             <i class="fa fa-bars"></i>
         </a>
         </div>
-        <footer class="site-footer">
-        <div class="footer-content">
-            <div class="footer-branding">
-            <img
-                src="img/Progress_Pride_Flag.png"
-                alt="Progress Pride Flag"
-                class="footer-flag"
-            />
-            <span class="footer-title"
-                >Created with passion by <strong>Hypekingfish</strong></span
-            >
-            <img
-                src="img/Progress_Pride_Flag.png"
-                alt="Progress Pride Flag"
-                class="footer-flag"
-            />
-            </div>
-            <div class="footer-social">
-            <a
-                href="https://github.com/[your-actual-username]"
-                aria-label="GitHub"
-                target="_blank"
-                rel="noopener noreferrer"
-            >
-                <i class="fab fa-github"></i>
-            </a>
-            <a
-                href="https://twitter.com/fishnbuckjr02"
-                aria-label="Twitter"
-                target="_blank"
-                rel="noopener noreferrer"
-            >
-                <i class="fab fa-x-twitter"></i>
-            </a>
-            <a
-                href="https://youtube.com/yourchannel"
-                aria-label="YouTube"
-                target="_blank"
-                rel="noopener noreferrer"
-            >
-                <i class="fab fa-youtube"></i>
-            </a>
-            <a
-                href="https://twitch.tv/hypekingfish"
-                aria-label="Twitch"
-                target="_blank"
-                rel="noopener noreferrer"
-            >
-                <i class="fab fa-twitch"></i>
-            </a>
-            <a
-                href="https://discord.gg/yourdiscord"
-                aria-label="Discord"
-                target="_blank"
-                rel="noopener noreferrer"
-            >
-                <i class="fab fa-discord"></i>
-            </a>
-            </div>
-            <p class="footer-copyright">
-            <small>
-                &copy; <span id="year"></span> Hypekingfish. All rights reserved.<br />
-                All content is property of Hypekingfish unless otherwise noted.
-            </small>
-            </p>
+        <div>
+            <section class="membership-section">
+                <h1>Become a Member on Ko-fi</h1>
+                <p>
+                    Support Hypekingfish and unlock exclusive perks by joining a membership tier on 
+                    <a href="https://ko-fi.com/hypekingfish/tiers" target="_blank" rel="noopener">Ko-fi</a>!
+                </p>
+                <div class="pricing-table">
+                    <div class="pricing-tier">
+                        <h2>Bronze</h2>
+                        <p class="price">$2.50 / month</p>
+                        <ul>
+                            <li>Discord role</li>
+                            <li>Supporter shout-out on stream</li>
+                            <li>Access to member-only Discord channel</li>
+                        </ul>
+                        <a class="join-btn" href="https://ko-fi.com/hypekingfish/tiers" target="_blank" rel="noopener">Join</a>
+                    </div>
+                    <div class="pricing-tier">
+                        <h2>Silver</h2>
+                        <p class="price">$5 / month</p>
+                        <ul>
+                            <li>All Bronze perks</li>
+                            <li>Early Access To Streamer Bot Extensions</li>
+                            <li></li>
+                        </ul>
+                        <a class="join-btn" href="https://ko-fi.com/hypekingfish/tiers" target="_blank" rel="noopener">Join</a>
+                    </div>
+                    <div class="pricing-tier">
+                        <h2>Gold</h2>
+                        <p class="price">$10 / month</p>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                        <a class="join-btn" href="https://ko-fi.com/hypekingfish/tiers" target="_blank" rel="noopener">Join</a>
+                    </div>
+                </div>
+                <p>
+                    <a href="https://ko-fi.com/hypekingfish" target="_blank" rel="noopener">
+                        See all perks &amp; details on Ko-fi <i class="fa fa-arrow-right"></i>
+                    </a>
+                </p>
+                <div class="membership-why"></div>
+                    <h3>Why Join?</h3>
+                    <ul>
+                        <li>Directly support the content you love</li>
+                        <li>Get recognized for your support</li>
+                        <li>Access exclusive content and community</li>
+                        <li>Help shape future projects and streams</li>
+                    </ul>
+                </div>
+                <div class="membership-faq"></div>
+                    <h3>FAQ</h3>
+                    <ul>
+                        <li><strong>Can I cancel anytime?</strong> Yes, memberships are flexible and you can cancel whenever you like.</li>
+                        <li><strong>How do I get my perks?</strong> After joining, you'll receive instructions via Ko-fi or email.</li>
+                        <li><strong>Is there a yearly option?</strong> Ko-fi may offer yearly plans—check the Ko-fi page for details.</li>
+                    </ul>
+                </div>
+            </section>
         </div>
+        <footer class="site-footer">
+                <div class="footer-content">
+                    <div class="footer-branding">
+                        <img src="img/Progress_Pride_Flag.png" alt="Progress Pride Flag" class="footer-flag"/>
+                        <span class="footer-title">Created with passion by <strong>Hypekingfish</strong></span>
+                        <img src="img/Progress_Pride_Flag.png" alt="Progress Pride Flag" class="footer-flag"/>
+                    </div>
+                    <div class="footer-social">
+                        <a href="https://github.com/[your-actual-username]" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-github"></i>
+                        </a>
+                        <a href="https://twitter.com/fishnbuckjr02" aria-label="Twitter" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-x-twitter"></i>
+                        </a>
+                        <a href="https://youtube.com/yourchannel" aria-label="YouTube" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-youtube"></i>
+                        </a>
+                        <a href="https://twitch.tv/hypekingfish" aria-label="Twitch" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-twitch"></i>
+                        </a>
+                        <a href="https://discord.gg/yourdiscord" aria-label="Discord" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-discord"></i>
+                        </a>
+                    </div>
+                    <div class="footer-support">
+                        <h4>Support the Site</h4>
+                        <a href="https://www.buymeacoffee.com/Hypekingfish"><img src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=&slug=Hypekingfish&button_colour=ffc425&font_colour=000000&font_family=Poppins&outline_colour=000000&coffee_colour=FFDD00" /></a>
+                    </div>
+                    <p class="footer-copyright">
+                        <small>
+                            &copy; <span id="year"></span> Hypekingfish. All rights reserved.<br>
+                            All content is property of Hypekingfish unless otherwise noted.
+                        </small>
+                    </p>
+                </div>
+            </footer>
         <script>
         document.getElementById("year").textContent = new Date().getFullYear();
         </script>
-        </footer>
         <script src="scripts/navmenu.js"></script>
     </body>
 </html>
