Update membership section with additional support perks for Bronze and Gold tiers

--- a/streaming.html
+++ b/streaming.html
@@ -49,7 +49,7 @@
                         <ul>
                             <li>All Bronze perks</li>
                             <li>Early Access To Streamer Bot Extensions</li>
-                            <li></li>
+                            <li>Priority support for questions and feedback</li>
                         </ul>
                         <a class="join-btn" href="https://ko-fi.com/hypekingfish/tiers" target="_blank" rel="noopener">Join</a>
                     </div>
@@ -57,9 +57,9 @@
                         <h2>Gold</h2>
                         <p class="price">$10 / month</p>
                         <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li>All Silver perks</li>
+                            <li>Free Streamer Bot Extension's</li>
+                            <li>Custom shout-out or request on stream</li>
                         </ul>
                         <a class="join-btn" href="https://ko-fi.com/hypekingfish/tiers" target="_blank" rel="noopener">Join</a>
                     </div>
