--- a/streaming.html
+++ b/streaming.html
@@ -8,6 +8,8 @@
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"/>
         <title>Hypekingfish</title>
         <link href="style.css" rel="stylesheet">
+        <link href="/CSS/Pricing.css" rel="stylesheet">
+        <link href="css/Footer.css" rel="stylesheet"/>
         <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
         <script src="https://kit.fontawesome.com/f78443c527.js" crossorigin="anonymous"></script>
@@ -35,32 +37,37 @@
                 <div class="pricing-table">
                     <div class="pricing-tier">
                         <h2>Bronze</h2>
-                        <p class="price">$2.50 / month</p>
+                        <p class="price">$2.50/month</p>
+                        <div class="tier-description">
                         <ul>
-                            <li>Discord role</li>
-                            <li>Supporter shout-out on stream</li>
-                            <li>Access to member-only Discord channel</li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
                         </ul>
+                    </div>
                         <a class="join-btn" href="https://ko-fi.com/hypekingfish/tiers" target="_blank" rel="noopener">Join</a>
                     </div>
                     <div class="pricing-tier">
                         <h2>Silver</h2>
-                        <p class="price">$5 / month</p>
-                        <ul>
-                            <li>All Bronze perks</li>
-                            <li>Early Access To Streamer Bot Extensions</li>
-                            <li>Priority support for questions and feedback</li>
-                        </ul>
+                        <p class="price">$5/month</p>
+                        <div class="tier-description">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                            </ul>
+                        </div>
                         <a class="join-btn" href="https://ko-fi.com/hypekingfish/tiers" target="_blank" rel="noopener">Join</a>
                     </div>
                     <div class="pricing-tier">
                         <h2>Gold</h2>
-                        <p class="price">$10 / month</p>
-                        <ul>
-                            <li>All Silver perks</li>
-                            <li>Free Streamer Bot Extension's</li>
-                            <li>Custom shout-out or request on stream</li>
-                        </ul>
+                        <p class="price">$10/month</p>
+                        <div class="tier-description">
+                            <ul>
+                                <li>All Silver Perks</li>
+                                <li>Free Streamer Bot Extension's</li>
+                                <li></li>
+                            </ul>
                         <a class="join-btn" href="https://ko-fi.com/hypekingfish/tiers" target="_blank" rel="noopener">Join</a>
                     </div>
                 </div>
@@ -69,23 +76,6 @@
                         See all perks &amp; details on Ko-fi <i class="fa fa-arrow-right"></i>
                     </a>
                 </p>
-                <div class="membership-why"></div>
-                    <h3>Why Join?</h3>
-                    <ul>
-                        <li>Directly support the content you love</li>
-                        <li>Get recognized for your support</li>
-                        <li>Access exclusive content and community</li>
-                        <li>Help shape future projects and streams</li>
-                    </ul>
-                </div>
-                <div class="membership-faq"></div>
-                    <h3>FAQ</h3>
-                    <ul>
-                        <li><strong>Can I cancel anytime?</strong> Yes, memberships are flexible and you can cancel whenever you like.</li>
-                        <li><strong>How do I get my perks?</strong> After joining, you'll receive instructions via Ko-fi or email.</li>
-                        <li><strong>Is there a yearly option?</strong> Ko-fi may offer yearly plans—check the Ko-fi page for details.</li>
-                    </ul>
-                </div>
             </section>
         </div>
         <footer class="site-footer">
