Add navigation styles and integrate footer and pricing CSS into HTML files

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     />
     <title>Hypekingfish - Home</title>
     <link href="style.css" rel="stylesheet" />
+    <link href="css/Footer.css" rel="stylesheet" />
+    <link href="css/Nav.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="img/FnBLogo_FINAL_800.png" />
     <script
       src="https://kit.fontawesome.com/f78443c527.js"
@@ -36,6 +38,7 @@
         <i class="fa fa-bars"></i>
       </a>
     </div>
+  
     <footer class="site-footer">
       <div class="footer-content">
         <div class="footer-branding">
