--- a/streaming.html
+++ b/streaming.html
@@ -8,8 +8,9 @@
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"/>
         <title>Hypekingfish</title>
         <link href="style.css" rel="stylesheet">
-        <link href="/CSS/Pricing.css" rel="stylesheet">
         <link href="css/Footer.css" rel="stylesheet"/>
+        <link href="css/Nav.css" rel="stylesheet"/>
+        <link href="css/Pricing.css" rel="stylesheet"/>
         <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
         <script src="https://kit.fontawesome.com/f78443c527.js" crossorigin="anonymous"></script>
