Add missing CSS links for footer and navigation styles

--- a/project.html
+++ b/project.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <title>Hypekingfish</title>
     <link href="style.css" rel="stylesheet" />
+    <link href="css/Footer.css" rel="stylesheet" />
+    <link href="css/Nav.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png" />
     <script
       src="https://kit.fontawesome.com/f78443c527.js"
